--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
             </section>
             <section>
-                <button>Convert to hex:</button>
+                <button>Convert!</button>
                 <input disabled type="text" name="hex-color" id="hex">
             </section>
             <section>
