--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 </ul>
             </section>
             <section>
-                <button>Convert!</button>
+                <button>:Hex</button>
                 <input disabled type="text" name="hex-color" id="hex">
             </section>
             <section>
-                <input type="color" name="display-color" id="color">
+                <input type="color" value="#1ec8ff" name="display-color" id="color">
             </section>
         </article>
     </main>
